hphp/hack/test/typecheck/inout/bad_inout_hint_return6.php.exp
File "bad_inout_hint_return6.php", line 4, characters 10-52:
Invalid return type (Typing[4110])
File "bad_inout_hint_return6.php", line 4, characters 25-27:
This is a num (int/float)
File "bad_inout_hint_return6.php", line 3, characters 33-35:
It is incompatible with an int
